fix: pop-up message overlap with other objects

--- a/christmas-task/src/index.scss
+++ b/christmas-task/src/index.scss
@@ -38,7 +38,6 @@ dinamic-page {
 	height: 80px;
 	background: rgb(166, 233, 165);
 	border-radius: 5px;
-	display: flex;
 	justify-content: center;
 	align-items: center;
 	color: rgb(45, 80, 44);
@@ -48,10 +47,12 @@ dinamic-page {
 	position: fixed;
 	top: 30px;
 	right: 30px;
+	display: none;
 	opacity: 0;
 }
 
 .pop-up-warning.active {
+	display: flex;
 	opacity: 1;
 	z-index: 100;
 }
